--- a/src/components/globals/CSS/Footer.css
+++ b/src/components/globals/CSS/Footer.css
@@ -1,8 +1,9 @@
 .site-footer {
-  background-color: #333;
+  background-color: #233168;
   color: #fff;
   padding: 20px 0;
   border-radius: 10px;
+  margin-top: 20px;
 }
 .footer-nav {
   display: flex;
